# scrcpy-android

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/tech/devline/scropy_ui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scrcpy-server
app/src/main/cpp/: CMakeLists.txt  adb_pairing_jni.cpp
app/src/main/java/tech/devline/scropy_ui/: App.kt  MainActivity.kt  StreamActivity.kt
app/src/main/java/tech/devline/scropy_ui/adb/: AdbAuthHelper.kt  AdbConnection.kt  AdbPairing.kt  AdbProtocol.kt  AdbStream.kt  AdbSync.kt  AdbTlsSocket.kt  AdbTransport.kt  TlsAdbTransport.kt  UsbAdbTransport.kt
app/src/main/java/tech/devline/scropy_ui/scrcpy/: AudioPlayer.kt  ControlSender.kt  ScrcpyProtocol.kt  ScrcpySession.kt  VideoDecoder.kt
app/src/main/java/tech/devline/scropy_ui/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/tech/devline/scropy_ui/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
